--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
         target: [
           "i686-unknown-linux-gnu",
           "x86_64-unknown-linux-gnu",
+          "x86_64-pc-windows-msvc",
           "arm-unknown-linux-gnueabi",
           "aarch64-unknown-linux-gnu",
           "powerpc-unknown-linux-gnu",
